[package]
name = "rish"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ArshiA Akhavan <letmemakenewone@gmail.com>"]
description = "a shell like syntax for scripting in rust!"
keywords = ["script", "shell", "bash", "sh"]
categories = ["script", "shell", "bash"]
repository = "https://github.com/ArshiAAkhavan/rish"

[dependencies]
